--- a/app/views/bookings/_availability.html.erb
+++ b/app/views/bookings/_availability.html.erb
@@ -1,5 +1,13 @@
 <div>
-<% calendar :year => 2009, :month => 8 do |date| %>
-<%= Booking.availability(date) %>
-<% end %>
+<%
+  calendar :year => 2009, :month => 8 do |date|
+    dayAvail = Booking.availability(date)
+    AccommType.find(:all).each do |dA|
+%>
+<br />
+<%= dA.name %>: <%= dayAvail[dA.id] %>
+<%
+    end
+  end
+%>
 </div>
