--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -23,4 +23,16 @@
 
 <br />
 
+<%= debug(@availMatrix) %>
+
+<table>
+  <% @availMatrix.each do |dl| %>
+  <tr>
+    <td></td>
+  </tr>
+  <% end %>
+</table>
+
+<br />
+
 <%= render :partial => 'availability' %>
